# DC_motor_MRAC

./: .gitignore  CMakeLists.txt  plot.py
include/: controller.hpp  integrator.hpp  motor.hpp  mrac.hpp  reference_model.hpp  simulation.hpp  trajectory.hpp  velocity_estimator.hpp
src/: controller.cpp  main.cpp  motor.cpp  mrac.cpp  reference_model.cpp  simulation.cpp  trajectory.cpp
